Fixed issue with form z-index

--- a/src/style.css
+++ b/src/style.css
@@ -29,6 +29,7 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
+  z-index: 10000;
 }
 
 .todo-form {
